--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,147 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Lobster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-black text-gray-400 font-Jost tracking-wider;
+}
+section {
+  @apply py-20 md:py-28;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+h1 {
+  @apply text-3xl md:text-4xl xl:text-5xl font-bold;
+}
+h2 {
+  @apply text-2xl md:text-3xl xl:text-4xl;
+}
+
+h3 {
+  @apply text-2xl md:text-2xl xl:text-3xl;
+}
+
+.nav-link {
+  @apply text-lg font-bold duration-300;
+}
+
+.nav-link:hover {
+  @apply text-yellow-500;
+}
+
+.title {
+  @apply font-extrabold uppercase mb-[4m];
+}
+.about-image {
+  @apply w-full h-full sm:w-2/3 lg:w-full xl:w-2/3 mx-10
+  inset-0 border-4 border-yellow-500 rounded-lg opacity-90 pointer-events-none;
+}
+
+.btn {
+  @apply border border-yellow-500   rounded-md px-5 py-2 duration-300;
+}
+
+.btn span {
+  @apply text-nowrap font-bold;
+}
+.btn:hover {
+  @apply opacity-90 text-blue-600;
+}
+/* poular section */
+
+.popular_card:hover {
+  @apply -top-4 shadow-2xl  transform transition-all duration-500;
+}
+
+.review_card {
+  @apply bg-black text-gray-400 rounded-lg w-full md:basis-1/2 p-4;
+}
+.review_card:hover {
+  @apply shadow-2xl shadow-blue-700 transform transition-all duration-500 ease-in-out;
+}
+
+/* navbar styles */
+
+.header {
+  position: fixed;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  z-index: 10;
+}
+
+/* nav bar transitional color overlay */
+.header-bg {
+  background-color: rgba(0, 0, 0, 0.85);
+  transition: 0.5s;
+}
+
+.nav-menu {
+  display: flex;
+  padding-top: 2rem;
+}
+
+.nav-menu li {
+  padding: 0 1rem;
+}
+
+/* stylinking the link component for the nav menu */
+.nav-menu a {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.header h1 {
+  font-size: 2rem;
+}
+
+.hamburger {
+  display: none;
+}
+.hamburger .icon {
+  color: gray;
+  font-size: 1.5rem;
+}
+
+/* responsivenss adjustment for smaller screen */
+
+@media screen and (max-width: 1240px) {
+  .hamburger {
+    display: block;
   }
+  /* drop down menu styling */
+  .nav-menu {
+    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: -100%;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    transition: 0.3s;
+    z-index: -1;
+    background: rgba(0, 0, 0, 0.9);
+  }
+
+  .nav-menu.active {
+    left: 0;
+  }
+  .nav-menu li {
+    padding: 1rem 0;
+  }
+
+  .nav-menu a {
+    font-size: 2rem;
+  }
+}
+
+.nav-hover:hover {
+  @apply sm:text-yellow-500 md:text-blue-500 transform transition-colors 
+  ease-out;
 }
